--- a/Dashboard/templates/dashboard_content.html
+++ b/Dashboard/templates/dashboard_content.html
@@ -33,4 +33,44 @@
         </div>
     {% endif %}
 
+    {% if messages %}
+        <div class="modal modal-success" id="MessageModal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        {% for msg in messages %}
+                            {{ msg }}
+                        {% endfor %}
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                aria-hidden="true">&times;</span></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+
+{#    {% block info_modal %}#}
+{#        <div class="modal modal-success" id="InfoModal" tabindex="-1" role="dialog" aria-labelledby="infoModalLabel">#}
+{#            <div class="modal-dialog" role="document">#}
+{#                <div class="modal-content">#}
+{#                    <div class="modal-header">#}
+{#                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span#}
+{#                                aria-hidden="true">&times;</span></button>#}
+{#                        <h4 class="modal-title" id="infoModalLabel"> {% block info_modal_title %}#}
+{#                        {% endblock %}</h4>#}
+{#                    </div>#}
+{#                    <div class="modal-body">#}
+{#                        {% block info_modal_content %}#}
+{#                        {% endblock %}#}
+{#                    </div>#}
+{#                    <div class="modal-footer">#}
+{#                        {% block info_modal_footer %}#}
+{#                        {% endblock %}#}
+{#                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+{#    {% endblock %}#}
+
 {% endblock %}
