--- a/Dashboard/templates/dashboard_index.html
+++ b/Dashboard/templates/dashboard_index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
-
-    <style type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <style>
         .sideBarNav {
             background: rgb(35, 1, 1);
         }
@@ -42,13 +42,34 @@
 <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
 <script>
+    {% if error_msg %}
+        $(window).on('load', function () {
+            $('#ErrorModal').modal('show');
+        });
+    {% endif %}
+    {% if messages %}
+        $(window).on('load', function () {
+            $('#MessageModal').modal('show');
+        });
+    {% endif %}
     $(document).ready(function () {
         $('#bootstrapdatatable').DataTable({
                 "aLengthMenu": [[3, 5, 10, 25, -1], [3, 5, 10, 25, "All"]],
                 "iDisplayLength": 5
             }
         );
+        $('#bootstrapdatatable1').DataTable({
+                "aLengthMenu": [[3, 5, 10, 25, -1], [3, 5, 10, 25, "All"]],
+                "iDisplayLength": 5
+            }
+        );
     });
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
+    $('.table-tooltip').tooltip({
+        sanitize: false
+    }).tooltip('show')
 </script>
 
 {% block scripts %}
